--- a/projekt_1/class_wireless_trans.ipynb
+++ b/projekt_1/class_wireless_trans.ipynb
@@ -11,8 +11,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###MPA-MLF miniprojekt 1###"
+      ],
+      "metadata": {
+        "id": "Tb8YthhCbjkg"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ymSBGv2Fr2OX"
       },
@@ -52,7 +61,7 @@
         },
         "outputId": "62172b97-4f9d-4733-b97a-be7e4d604843"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,8 +89,17 @@
       "metadata": {
         "id": "jajUKu25Y0zK"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Separate useful data and divede train ant test data##"
+      ],
+      "metadata": {
+        "id": "Ske6SXs0buug"
+      }
     },
     {
       "cell_type": "code",
@@ -106,13 +124,13 @@
       "metadata": {
         "id": "IuBg6koMKiTp"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Data preprocessing###"
+        "##Data preprocessing##"
       ],
       "metadata": {
         "id": "MJlDEkQB5NP8"
@@ -130,13 +148,13 @@
       "metadata": {
         "id": "yxk7hjSU5TbR"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "###Model building###"
+        "###Model building and opitimze###"
       ],
       "metadata": {
         "id": "Wj3_qzuv1Yku"
@@ -148,7 +166,6 @@
         "model = Sequential()\n",
         "model.add(Flatten(input_shape=(clasess, 1)))      \n",
         "model.add(Dense(64, activation='relu'))\n",
-        "#model.add(Dense(256, activation='sigmoid'))\n",
         "model.add(Dense(clasess, activation='softmax'))\n",
         "\n",
         "model.summary()"
@@ -160,7 +177,7 @@
         },
         "outputId": "1c4ec5c1-2964-482d-9fab-0b2fbb781dac"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +211,7 @@
       "metadata": {
         "id": "3kYu8Yy-13pw"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +226,7 @@
     {
       "cell_type": "code",
       "source": [
-        "history = model.fit(x_train_scaled, y_train_encoded, epochs=30, batch_size=32, validation_split = 0.2)\n"
+        "history = model.fit(x_train_scaled, y_train_encoded, epochs=30, batch_size=32, validation_split = 0.2)"
       ],
       "metadata": {
         "id": "etR2my9a2ESU",
@@ -218,7 +235,7 @@
         },
         "outputId": "a1b6bf78-0beb-4224-eefa-90f27f602cca"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +324,7 @@
         "id": "eBepk5ZMUVal",
         "outputId": "a5946a5f-19ec-4c93-9f7c-8f79f1d9bb3a"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,47 +338,21 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(y_test.shape)\n",
-        "print(y_train.shape)\n",
-        "print(x_test_scaled.shape)\n",
-        "print(y_test_encoded.shape)\n",
-        "print(x_test.shape)\n",
-        "\n",
-        "print(x_test_pred.shape)\n",
-        "x_test_pred_scaled = abs((x_test_pred-x_test_pred.min())/(x_test_pred.max()-x_test_pred.min()))\n"
+        "##Predicting data##"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "687vdJh5ZrN4",
-        "outputId": "ffa6a250-e78a-4420-c8cd-b3f67d4099b7"
-      },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(3072, 1)\n",
-            "(12288, 1)\n",
-            "(3072, 8)\n",
-            "(3072, 8)\n",
-            "(3072, 8)\n",
-            "(3840, 8)\n"
-          ]
-        }
-      ]
+        "id": "-SVqjRm4ckDu"
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        "x_test_pred_scaled = abs((x_test_pred-x_test_pred.min())/(x_test_pred.max()-x_test_pred.min()))\n",
+        "\n",
         "pred_val = model.predict([x_test_pred_scaled])\n",
-        "#pred_val = model.predict(x_test)\n",
-        "#pred_val = model.predict([x_test_scaled])\n",
-        "print(pred_val.shape)\n",
+        "\n",
         "df = pd.DataFrame(pred_val)\n",
         "\n",
         "row_numb = df.shape[0]\n",
@@ -373,7 +364,6 @@
         "print(row_numb)\n",
         "\n",
         "pred_numbs_res = pred_numbs_res + 1\n",
-        "pred_numbs = pred_numbs + 1\n",
         "\n",
         "df = pd.DataFrame(pred_numbs_res)\n",
         "df.columns = [\"target\"]\n",
@@ -394,7 +384,7 @@
         "id": "clVqLdRwXhwG",
         "outputId": "a0a61f59-8628-4e42-b387-f8047e99ee40"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,208 +419,6 @@
     {
       "cell_type": "code",
       "source": [
-        "files.download('filename.csv')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "id": "E3qCjxpr_gEc",
-        "outputId": "8b14ab4d-19b5-48ca-a253-f804c2b34226"
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_48ab648f-4d5c-4477-ae49-1ec3ff9968df\", \"filename.csv\", 25778)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(pred_numbs_res)\n",
-        "print(pred_val)\n",
-        "\n",
-        "df = pd.DataFrame(pred_val)\n",
-        "df.to_csv('pred_val.csv') \n",
-        "#files.download('pred_val.csv')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HEhjyUZ5Z5Q1",
-        "outputId": "0d136087-84a4-41ea-a822-6384d0acd9e5"
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[7]\n",
-            " [6]\n",
-            " [7]\n",
-            " ...\n",
-            " [7]\n",
-            " [7]\n",
-            " [7]]\n",
-            "[[0.0000000e+00 0.0000000e+00 0.0000000e+00 ... 0.0000000e+00\n",
-            "  9.9999994e-01 0.0000000e+00]\n",
-            " [0.0000000e+00 0.0000000e+00 0.0000000e+00 ... 9.9999994e-01\n",
-            "  1.4274074e-26 0.0000000e+00]\n",
-            " [0.0000000e+00 0.0000000e+00 0.0000000e+00 ... 0.0000000e+00\n",
-            "  9.9999994e-01 0.0000000e+00]\n",
-            " ...\n",
-            " [0.0000000e+00 0.0000000e+00 0.0000000e+00 ... 0.0000000e+00\n",
-            "  9.9999994e-01 0.0000000e+00]\n",
-            " [0.0000000e+00 0.0000000e+00 0.0000000e+00 ... 0.0000000e+00\n",
-            "  9.9999994e-01 0.0000000e+00]\n",
-            " [0.0000000e+00 0.0000000e+00 0.0000000e+00 ... 0.0000000e+00\n",
-            "  9.9999994e-01 0.0000000e+00]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#pred_numbs = pred_numbs + 1\n",
-        "count = pd.Series(pred_numbs).value_counts()\n",
-        "\n",
-        "#print('0', count[0])\n",
-        "\n",
-        "#print('1', count[1])\n",
-        "#print('2', count[2])\n",
-        "print('3', count[3])\n",
-        "#print('4', count[4])\n",
-        "print('5', count[5])\n",
-        "print('6', count[6])\n",
-        "print('7', count[7])\n",
-        "#print('8', count[8])\n",
-        "\n",
-        "print(pred_numbs_res)\n",
-        "\n",
-        "\n",
-        "\n",
-        "#files.download('filename.csv')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WJ-QEe_yW_ED",
-        "outputId": "2467d26d-88d7-4583-d916-0e3a4fe9e2bd"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3 22\n",
-            "5 419\n",
-            "6 202\n",
-            "7 2418\n",
-            "[[7]\n",
-            " [6]\n",
-            " [7]\n",
-            " ...\n",
-            " [7]\n",
-            " [7]\n",
-            " [7]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(history)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cYRXJvNINUAE",
-        "outputId": "da8df445-3556-4102-ac8b-dfa20d23c31e"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<keras.callbacks.History object at 0x7f13483399d0>\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "plt.figure()\n",
         "plt.plot(history.history['loss'], label=\"loss\")\n",
         "plt.plot(history.history['val_loss'], label=\"val_loss\")\n",
@@ -655,7 +443,7 @@
         "id": "iikVmmCKXYZH",
         "outputId": "0390451d-d78f-47de-fa80-b6e193d0c7ac"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
