--- a/projekt_1/class_wireless_trans.ipynb
+++ b/projekt_1/class_wireless_trans.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###MPA-MLF miniprojekt 1###"
+        "# MPA-MLF miniprojekt 1"
       ],
       "metadata": {
         "id": "Tb8YthhCbjkg"
@@ -95,7 +95,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Separate useful data and divede train ant test data##"
+        "## Separate useful data and divede train ant test data"
       ],
       "metadata": {
         "id": "Ske6SXs0buug"
@@ -130,7 +130,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Data preprocessing##"
+        "## Data preprocessing"
       ],
       "metadata": {
         "id": "MJlDEkQB5NP8"
@@ -154,7 +154,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Model building and opitimze###"
+        "## Model building and opitimze"
       ],
       "metadata": {
         "id": "Wj3_qzuv1Yku"
@@ -217,7 +217,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###Model trainnig###"
+        "## Model trainnig"
       ],
       "metadata": {
         "id": "D19kl_O-17Z1"
@@ -340,7 +340,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Predicting data##"
+        "## Predicting data"
       ],
       "metadata": {
         "id": "-SVqjRm4ckDu"
